# bmi-calculator

./: .gitignore  Cargo.toml  LICENSE  LICENSE-MIT  bmi-calculator-3674a598be89285d.js  bmi-calculator-3674a598be89285d_bg.wasm  index-35176160e9c982e9.css  index-84a204156f9510f5.css  index.html  index.scss  tailwind-2224d7acf72b9275.css  tailwind-d3e4dd71631cc0f8.css
.github/workflows/: continuous_deployment.yml
src/: main.rs
src/app/: app.rs  app.scss
src/app/components/: mod.rs
src/app/components/background_gradient/: background_gradient.rs  mod.rs
src/app/components/calculator/: calculator.rs  calculator.scss  mod.rs
src/app/components/calculator/bmi_calculator/: bmi_calculator.rs  bmi_calculator.scss  mod.rs
src/app/components/calculator/radio_inputs/: mod.rs  radio_inputs.rs  radio_inputs.scss
src/app/components/calculator/unit_inputs/: mod.rs  unit_inputs.rs  unit_inputs.scss
src/app/components/calculator/units/: mod.rs  units.rs
src/app/components/description_text/: description_text.rs  description_text.scss  mod.rs
src/app/components/header/: header.rs
src/app/components/introduction_text/: introduction_text.rs  introduction_text.scss  mod.rs
src/app/components/limitation_cards/: limitation_cards.rs  limitation_cards.scss  mod.rs
src/app/components/limitation_text/: limitation_text.rs  limitation_text.scss  mod.rs
src/app/components/top_description/: mod.rs  top_description.rs  top_description.scss
