[package]
name = "bmi-calculator"
version = "0.1.0"
edition = "2021"
description = "BMI calculator"
readme = "README.md"
repository = "https://github.com/yewstack/yew-trunk-minimal-template"
license = "MIT OR Apache-2.0"
keywords = ["yew", "trunk"]
categories = ["gui", "wasm", "web-programming"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
yew = { version="0.21.0", features=["csr"] }
stylist = { version="0.13.0", features=["yew", "parser"] }
wasm-bindgen = "0.2"
web-sys = "0.3.67"
gloo = "0.11.0"
serde = "1.0.194"
serde_json = "1.0.111"
struct-field-names-as-array = "0.3.0"